Fix checks